# pygame_extensions

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
scripts/: cli.py
src/logging/: basic_logger.py
src/pygame_extensions/: __init__.py  animated_sprite.py  animation.py
tests/: test_pygame_extensions.py
