[build-system]
requires = ["setuptools>=44.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=pygame_extensions --durations=0"
testpaths = [
    "tests",
    "src",
    "scripts"
]

[tool.mypy]
mypy_path = ["tests", "src", "scripts"]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
