[metadata]
name = pygame_extensions
version = attr: pygame_extensions.__version__
description = N/A
long_description = file: README.md
long_description_content_type = text/markdown
author = Dmitry Maligin
author_email = dmitry.maligin85@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    pygame_extensions
install_requires =
    loguru~=0.6.0
    pygame~=2.1.2
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0.1
    mypy>=0.950
    pytest>=7.1.2
    pytest-cov>=3.0
    tox>=3.25

[options.package_data]
pygame_extensions = py.typed

[flake8]
max-line-length = 88
